fixes to interpreter path for upcalls